samples/_failures_safe/1761424081_2b110d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af3a590d.c: In function ‘main’:
./samples/SAFE/__tmp_af3a590d.c:137:18: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  137 |     read_matrix(&mat
      |                  ^~~
      |                  mat2
./samples/SAFE/__tmp_af3a590d.c:137:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_af3a590d.c:137:21: error: expected ‘)’ at end of input
  137 |     read_matrix(&mat
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_af3a590d.c:137:5: error: too few arguments to function ‘read_matrix’
  137 |     read_matrix(&mat
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_af3a590d.c:40:6: note: declared here
   40 | void read_matrix(Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~
./samples/SAFE/__tmp_af3a590d.c:137:5: error: expected declaration or statement at end of input
  137 |     read_matrix(&mat
      |     ^~~~~~~~~~~
